--- a/example/doc/local-playbook.yml
+++ b/example/doc/local-playbook.yml
@@ -39,6 +39,7 @@ antora:
           tag: 'v0.11.0'
           clone-submodules: false
           variable: 'FMT_SRC_ROOT'
+          system-env: 'FMT_SRC_ROOT'
 
 asciidoc:
   attributes:
