--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cache-directory": "^2.0.0",
     "fast-glob": "^3.3.2",
     "isomorphic-git": "^1.27.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "semver": "^7.6.3"
   }
 }
