--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/extension.js",
   "scripts": {
     "test": "node test/extension.test.js",
-    "example": "cd example/doc && npm ci && npx antora --fetch local-playbook.yml --stacktrace --log-level all"
+    "example": "cd example/doc && npm ci --no-audit --prefer-offline && npx antora --fetch local-playbook.yml --stacktrace --log-level all"
   },
   "repository": {
     "type": "git",
