feat: synthesize reference breadcrumbs without nav files
Antora’s UI trusts page.breadcrumbs, so we capture every generated .adoc, patch buildUiModel once, and inject our directory-derived trail (module → namespaces → leaf page) at contentClassified. That lets us keep the sidebar untouched while still producing clickable breadcrumbs for thousands of MrDocs pages with no gigantic nav.adoc required in the sidebar.

--- a/example/doc/local-playbook.yml
+++ b/example/doc/local-playbook.yml
@@ -33,6 +33,7 @@ antora:
   extensions:
     # Replace with @alandefreitas/antora-cpp-reference-extension in a real project
     - require: '../../lib/extension.js'
+      breadcrumbs: true
       dependencies:
         - name: 'fmt'
           repo: 'https://github.com/fmtlib/fmt.git'
