--- a/example/doc/local-playbook.yml
+++ b/example/doc/local-playbook.yml
@@ -33,6 +33,7 @@ antora:
   extensions:
     # Replace with @alandefreitas/antora-cpp-reference-extension in a real project
     - require: '../../lib/extension.js'
+      auto-base-url: true
       breadcrumbs: true
       dependencies:
         - name: 'fmt'
